# uv_mwe_mypackage2

./: README.md  pyproject.toml
src/: main.py
