[project]
name = "uv_mwe_mypackage2"
description = "Minimum Working Example of unexpected behavior"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []
dynamic = ["version"]

[build-system]
requires = ["hatchling >= 1.26", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.hatch.version]
source = "vcs"
